functions/firebase-debug.log
[debug] [2019-08-21T08:29:00.641Z] ----------------------------------------------------------------------
[debug] [2019-08-21T08:29:00.642Z] Command:       /home/mickolas/.nvm/versions/node/v11.12.0/bin/node /home/mickolas/.nvm/versions/node/v11.12.0/bin/firebase functions:shell
[debug] [2019-08-21T08:29:00.642Z] CLI Version:   7.2.4
[debug] [2019-08-21T08:29:00.642Z] Platform:      linux
[debug] [2019-08-21T08:29:00.642Z] Node Version:  v11.12.0
[debug] [2019-08-21T08:29:00.643Z] Time:          Wed Aug 21 2019 04:29:00 GMT-0400 (Eastern Daylight Time)
[debug] [2019-08-21T08:29:00.643Z] ----------------------------------------------------------------------
[debug] 
[debug] [2019-08-21T08:29:00.647Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2019-08-21T08:29:00.647Z] > authorizing via signed-in user
[debug] [2019-08-21T08:29:00.647Z] [iam] checking project ow-temple for permissions ["firebase.projects.get"]
[debug] [2019-08-21T08:29:00.648Z] >>> HTTP REQUEST POST https://cloudresourcemanager.googleapis.com/v1/projects/ow-temple:testIamPermissions  

[debug] [2019-08-21T08:29:00.926Z] <<< HTTP RESPONSE 200
[warn] ⚠  Your requested "node" version "8" doesn't match your global version "11"
[info] ✔  functions: Emulator started at http://localhost:5000
[debug] [2019-08-21T08:29:01.198Z] [functions] Watching "/home/mickolas/developer/myserver/owtemple/functions" for Cloud Functions...
[debug] [2019-08-21T08:29:01.409Z] DEBUG: [runtime-status] Functions runtime initialized. {"cwd":"/home/mickolas/developer/myserver/owtemple/functions","node_version":"11.12.0"}
[debug] [2019-08-21T08:29:01.409Z] DEBUG: [runtime-status] Disabled runtime features: {"functions_config_helper":true,"network_filtering":true,"timeout":true,"memory_limiting":true,"admin_stubs":true} {}
[debug] [2019-08-21T08:29:01.412Z] DEBUG: [runtime-status] Resolved module firebase-admin {"declared":true,"installed":true,"version":"8.3.0","resolution":"/home/mickolas/developer/myserver/owtemple/functions/node_modules/firebase-admin/lib/index.js"}
[debug] [2019-08-21T08:29:01.413Z] DEBUG: [runtime-status] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.2.0","resolution":"/home/mickolas/developer/myserver/owtemple/functions/node_modules/firebase-functions/lib/index.js"}
[debug] [2019-08-21T08:29:01.413Z] DEBUG: [runtime-status] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.2.0","resolution":"/home/mickolas/developer/myserver/owtemple/functions/node_modules/firebase-functions/lib/index.js"}
[warn] ⚠  /home/mickolas/developer/myserver/owtemple/functions/index.js:6
const functions = require("firebase-functions");
      ^

SyntaxError: Identifier 'functions' has already been declared
    at Module._compile (internal/modules/cjs/loader.js:743:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:810:10)
    at Module.load (internal/modules/cjs/loader.js:666:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:606:12)
    at Function.Module._load (internal/modules/cjs/loader.js:598:3)
    at Module.require (internal/modules/cjs/loader.js:705:19)
    at require (internal/modules/cjs/helpers.js:14:16)
    at /home/mickolas/.nvm/versions/node/v11.12.0/lib/node_modules/firebase-tools/lib/emulator/functionsEmulatorRuntime.js:660:33
    at Generator.next (<anonymous>)
    at fulfilled (/home/mickolas/.nvm/versions/node/v11.12.0/lib/node_modules/firebase-tools/lib/emulator/functionsEmulatorRuntime.js:4:58)
[warn] ⚠  We were unable to load your functions code. (see above)
